--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,47 +1,26 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/2.0/configuration-reference
+# See: https://circleci.com/docs/configuration-reference
 version: 2.1
 
 # Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
+# See: https://circleci.com/docs/configuration-reference/#jobs
 jobs:
-  test:
-    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
+  say-hello:
+    # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
+    # See: https://circleci.com/docs/configuration-reference/#executor-job
     docker:
-      - image: ghcr.io/3kmfi6hp/argo-airport-paas:debian
-    environment:
-      API_HOST: https://v2.circleci-dev.example.com
-      API_KEY: xxxx
-      ARGO_DOMAIN: circleci-dev.example.com
-      ARGO_AUTH: xxxx
-      NEZHA_KEY: xxxx
-      NEZHA_PORT: 555
-      NEZHA_SERVER: nz-circleci-dev.example.com
-      NODE_ID: 55
-      TUNNEL_TRANSPORT_PROTOCOL: http2
+      - image: cimg/base:stable
     # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+    # See: https://circleci.com/docs/configuration-reference/#steps
     steps:
       - checkout
-      - restore_cache:
-          # See the configuration reference documentation for more details on using restore_cache and save_cache steps
-          # https://circleci.com/docs/2.0/configuration-reference/?section=reference#save_cache
-          keys:
-            - node-deps-v1-{{ .Branch }}-{{checksum "package.json"}}
       - run:
-          name: install packages
-          command: npm install && apt-get update && apt-get install -y curl
-      - save_cache:
-          key: node-deps-v1-{{ .Branch }}-{{checksum "package.json"}}
-          paths:
-            - ~/.npm
-      - run:
-          name: Run service
-          command: node server.js & pid=$! && sleep 600 && kill $pid
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
+          name: "Say hello"
+          command: "echo Hello, World!"
+
+# Orchestrate jobs using workflows
+# See: https://circleci.com/docs/configuration-reference/#workflows
 workflows:
-  orb-free-workflow:
+  say-hello-workflow:
     jobs:
-      - test
+      - say-hello
