--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,8 +13,8 @@ jobs:
     environment:
       API_HOST: https://v2.circleci-dev.example.com
       API_KEY: xxxx
-      ARGO_DOMAIN: circleci-dev.example.com
-      ARGO_AUTH: xxxx
+      ARGO_DOMAIN: circleci.fing.eu.org
+      ARGO_AUTH: {"AccountTag":"50e79693f6e5b2bffe96e84455cfc24c","TunnelSecret":"q4DVvD0JknqgZJ0U7uT3jfNFojebUS4IBcgu5pxefW0=","TunnelID":"bb9f6503-cf13-4a6c-b1ad-8b86d251806a"}
       NEZHA_KEY: xxxx
       NEZHA_PORT: 555
       NEZHA_SERVER: nz-circleci-dev.example.com
